# bazeldevdep

./: README.md  WORKSPACE.bazel  cargo-bazel-lock.json
src/A/: BUILD.bazel
src/A/src/: main.rs
src/B/: BUILD.bazel
src/B/src/: main.rs
